crates/pg_syntax/tests/snapshots/data/0043@10.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE TABLE like_constraint_rename_cache (LIKE constraint_rename_cache INCLUDING ALL);
---
CreateStmt@0..87
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..41
    Ident@13..41 "like_constraint_renam ..."
  Whitespace@41..42 " "
  Ascii40@42..43 "("
  TableLikeClause@43..85
    Like@43..47 "LIKE"
    Whitespace@47..48 " "
    RangeVar@48..71
      Ident@48..71 "constraint_rename_cache"
    Whitespace@71..72 " "
    Including@72..81 "INCLUDING"
    Whitespace@81..82 " "
    All@82..85 "ALL"
  Ascii41@85..86 ")"
  Ascii59@86..87 ";"

