crates/pg_syntax/tests/snapshots/data/0043@3.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE TABLE types (a real, b double precision, c numeric(2, 3), d char(4), e char(5), f varchar(6), g varchar(7));"
---
CreateStmt@0..115
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..18
    TypesP@13..18 "types"
  Whitespace@18..19 " "
  Ascii40@19..20 "("
  ColumnDef@20..26
    Ident@20..21 "a"
    Whitespace@21..22 " "
    TypeName@22..26
      Real@22..26 "real"
  Ascii44@26..27 ","
  Whitespace@27..28 " "
  ColumnDef@28..46
    Ident@28..29 "b"
    Whitespace@29..30 " "
    TypeName@30..46
      DoubleP@30..36 "double"
      Whitespace@36..37 " "
      Precision@37..46 "precision"
  Ascii44@46..47 ","
  Whitespace@47..48 " "
  ColumnDef@48..62
    Ident@48..49 "c"
    Whitespace@49..50 " "
    TypeName@50..62
      Numeric@50..57 "numeric"
      Ascii40@57..58 "("
      AConst@58..59
        Iconst@58..59 "2"
      Ascii44@59..60 ","
      Whitespace@60..61 " "
      AConst@61..62
        Iconst@61..62 "3"
  Ascii41@62..63 ")"
  Ascii44@63..64 ","
  Whitespace@64..65 " "
  ColumnDef@65..73
    Ident@65..66 "d"
    Whitespace@66..67 " "
    TypeName@67..73
      CharP@67..71 "char"
      Ascii40@71..72 "("
      AConst@72..73
        Iconst@72..73 "4"
  Ascii41@73..74 ")"
  Ascii44@74..75 ","
  Whitespace@75..76 " "
  ColumnDef@76..84
    Ident@76..77 "e"
    Whitespace@77..78 " "
    TypeName@78..84
      CharP@78..82 "char"
      Ascii40@82..83 "("
      AConst@83..84
        Iconst@83..84 "5"
  Ascii41@84..85 ")"
  Ascii44@85..86 ","
  Whitespace@86..87 " "
  ColumnDef@87..98
    Ident@87..88 "f"
    Whitespace@88..89 " "
    TypeName@89..98
      Varchar@89..96 "varchar"
      Ascii40@96..97 "("
      AConst@97..98
        Iconst@97..98 "6"
  Ascii41@98..99 ")"
  Ascii44@99..100 ","
  Whitespace@100..101 " "
  ColumnDef@101..112
    Ident@101..102 "g"
    Whitespace@102..103 " "
    TypeName@103..112
      Varchar@103..110 "varchar"
      Ascii40@110..111 "("
      AConst@111..112
        Iconst@111..112 "7"
  Ascii41@112..113 ")"
  Ascii41@113..114 ")"
  Ascii59@114..115 ";"

