crates/pg_syntax/tests/snapshots/data/0046@1.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE TYPE type1;
---
DefineStmt@0..18
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  TypeP@7..11 "TYPE"
  Whitespace@11..12 " "
  Ident@12..17 "type1"
  Ascii59@17..18 ";"

