crates/pg_syntax/tests/snapshots/data/0046@6.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE TYPE type1 AS RANGE (subtype = int4, receive = receive_func, passedbyvalue);"
---
CreateRangeStmt@0..83
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  TypeP@7..11 "TYPE"
  Whitespace@11..12 " "
  Ident@12..17 "type1"
  Whitespace@17..18 " "
  As@18..20 "AS"
  Whitespace@20..21 " "
  Range@21..26 "RANGE"
  Whitespace@26..27 " "
  Ascii40@27..28 "("
  DefElem@28..42
    Ident@28..35 "subtype"
    Whitespace@35..36 " "
    Ascii61@36..37 "="
    Whitespace@37..38 " "
    TypeName@38..42
      Ident@38..42 "int4"
  Ascii44@42..43 ","
  Whitespace@43..44 " "
  DefElem@44..66
    Ident@44..51 "receive"
    Whitespace@51..52 " "
    Ascii61@52..53 "="
    Whitespace@53..54 " "
    TypeName@54..66
      Ident@54..66 "receive_func"
  Ascii44@66..67 ","
  Whitespace@67..68 " "
  DefElem@68..81
    Ident@68..81 "passedbyvalue"
  Ascii41@81..82 ")"
  Ascii59@82..83 ";"

